iron-galley/solution/mariadb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-db
  labels:
    db: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
       db: mariadb
  template:
    metadata:
      labels:
        db: mariadb
    spec:
      containers:
      - name: iron-db
        image: kodekloud/irondb:2.0
        volumeMounts:
         - name: db
           mountPath: /var/lib/mysql
      volumes:
      - name: db
        emptyDir: {}
