iron-galley/solution/iron-galley-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-gallery-service
spec:
  selector:
    app: druapl
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
