iron-galley/solution/iron-gallery-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iron-gallery-firewall
spec:
  podSelector: 
    matchLabels:
      db: mariadb
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: iron-gallery
    - podSelector:
        matchLabels:
          db: mariadb
    ports:
      - protocol: TCP
        port: 3306
